force-app/main/default/objects/NavFlowPageConfig__mdt/NavFlowPageConfig__mdt.object-meta.xml
<CustomObject>
    <description>Contains navigation flow page configuration.</description>
    <label>Navigation Flow Page Configuration</label>
    <pluralLabel>Navigation Flow Page Configuration</pluralLabel>
</CustomObject>