force-app/main/default/objects/NavFlowPageConfig__mdt/fields/Internal_Flow__c.field-meta.xml
<CustomField>
    <fullName>Internal_Flow__c</fullName>
    <label>Internal Flow</label>
    <type>TextArea</type>
</CustomField>