force-app/main/default/objects/NavFlowPageConfig__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to indicate if the page is active i.e., part of the flow. Use this flag to mark the pages which become no longer needed in the flow as per new configuration.</description>
    <inlineHelpText>Flag to indicate if the page is active i.e., part of the flow. Use this flag to mark the pages which become no longer needed in the flow as per new configuration.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>