force-app/main/default/objects/NavFlowPageConfig__mdt/fields/IsExcludedInProgress__c.field-meta.xml
<CustomField>
    <fullName>IsExcludedInProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate whether this page should be excluded from progress calculation in the flow.</description>
    <inlineHelpText>Flag to indicate whether this page should be excluded from progress calculation in the flow.</inlineHelpText>
    <label>Is Excluded In Progress</label>
    <type>Checkbox</type>
</CustomField>