force-app/main/default/objects/NavFlowPageConfig__mdt/fields/IsFinalSummaryPage__c.field-meta.xml
<CustomField>
    <fullName>IsFinalSummaryPage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate whether this page is the final summary page in the flow. This flag is used to differentiate whether to show the progress bar for this page. For Final Summary Page progress bar will not be displayed.</description>
    <inlineHelpText>Flag to indicate whether this page is the final summary page in the flow. This flag is used to differentiate whether to show the progress bar for this page. For Final Summary Page progress bar will not be displayed.</inlineHelpText>
    <label>Is Final Summary Page</label>
    <type>Checkbox</type>
</CustomField>