force-app/main/default/objects/NavFlowPageConfig__mdt/fields/IsTMemberCheckRequired__c.field-meta.xml
<CustomField>
    <fullName>IsTMemberCheckRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether a T Member Check is Required</description>
    <label>Is TMember Check Required ?</label>
    <type>Checkbox</type>
</CustomField>