force-app/main/default/objects/NavFlowPageConfig__mdt/fields/ListenerPageNames__c.field-meta.xml
<CustomField>
    <fullName>ListenerPageNames__c</fullName>
    <description>Pages that are listening to this page during flow navigation. In other words, the pages that are depending on the values/conditions from this page. The flow rules of those listening pages will be triggered after this page&apos;s process is completed. This will determine page queues in the flow.</description>
    <inlineHelpText>Pages that are listening to this page during flow navigation. In other words, the pages that are depending on the values/conditions from this page. The flow rules of those listening pages will be triggered after this page&apos;s process is completed.</inlineHelpText>
    <label>Listener Page Names</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>