force-app/main/default/objects/NavFlowPageConfig__mdt/fields/NavFlowRule__c.field-meta.xml
<CustomField>
    <fullName>NavFlowRule__c</fullName>
    <description>Rule condition to queue/show the page. If no rule is configured then by default the page will be queued/showed.</description>
    <inlineHelpText>Rule condition to queue/show the page. If no rule is configured then by default the page will be queued/showed.</inlineHelpText>
    <label>Navigation Flow Rule</label>
    <referenceTo>NavFlowRule__mdt</referenceTo>
    <relationshipLabel>Navigation Flow Page Configuration</relationshipLabel>
    <relationshipName>Navigation_Flow_Page_Configuration</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>