force-app/main/default/objects/NavFlowPageConfig__mdt/fields/NavigationFlowDetail__c.field-meta.xml
<CustomField>
    <fullName>NavigationFlowDetail__c</fullName>
    <label>Navigation Flow Detail</label>
    <referenceTo>NavFlowDetail__mdt</referenceTo>
    <relationshipLabel>Navigation Flow Page Configuration</relationshipLabel>
    <relationshipName>Navigation_Flow_Page_Configuration</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>