force-app/main/default/objects/NavFlowPageConfig__mdt/fields/Page_Config_Display_Name_View__c.field-meta.xml
<CustomField>
    <fullName>Page_Config_Display_Name_View__c</fullName>
    <label>Page Config Display Name View</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Absent Parent</fullName>
                
                
                    <label>Absent Parent</label>
                
                </value>
            
                <value>
                
                    <fullName>Access to Healthcare Coverage Summary</fullName>
                
                
                    <label>Access to Healthcare Coverage Summary</label>
                
                </value>
            
                <value>
                
                    <fullName>American Indian Alaskan Native</fullName>
                
                
                    <label>American Indian Alaskan Native</label>
                
                </value>
            
                <value>
                
                    <fullName>Blindness</fullName>
                
                
                    <label>Blindness</label>
                
                </value>
            
                <value>
                
                    <fullName>Conviction</fullName>
                
                
                    <label>Conviction</label>
                
                </value>
            
                <value>
                
                    <fullName>Education</fullName>
                
                
                    <label>Education</label>
                
                </value>
            
                <value>
                
                    <fullName>Enrollment in Healthcare Coverage Summary</fullName>
                
                
                    <label>Enrollment in Healthcare Coverage Summary</label>
                
                </value>
            
                <value>
                
                    <fullName>Expedite your SNAP Benefits</fullName>
                
                
                    <label>Expedite your SNAP Benefits</label>
                
                </value>
            
                <value>
                
                    <fullName>Former Foster Care</fullName>
                
                
                    <label>Former Foster Care</label>
                
                </value>
            
                <value>
                
                    <fullName>Health Condition</fullName>
                
                
                    <label>Health Condition</label>
                
                </value>
            
                <value>
                
                    <fullName>Health</fullName>
                
                
                    <label>Health</label>
                
                </value>
            
                <value>
                
                    <fullName>Healthcare Coverage Selection</fullName>
                
                
                    <label>Healthcare Coverage Selection</label>
                
                </value>
            
                <value>
                
                    <fullName>Household Circumstances</fullName>
                
                
                    <label>Household Circumstances</label>
                
                </value>
            
                <value>
                
                    <fullName>Household Meal</fullName>
                
                
                    <label>Household Meal</label>
                
                </value>
            
                <value>
                
                    <fullName>Alien Sponsor</fullName>
                
                
                    <label>Alien Sponsor</label>
                
                </value>
            
                <value>
                
                    <fullName>Living Arrangement</fullName>
                
                
                    <label>Living Arrangement</label>
                
                </value>
            
                <value>
                
                    <fullName>Medical Expenses (Last 3 Months)</fullName>
                
                
                    <label>Medical Expenses (Last 3 Months)</label>
                
                </value>
            
                <value>
                
                    <fullName>Not a U.S. Citizen</fullName>
                
                
                    <label>Not a U.S. Citizen</label>
                
                </value>
            
                <value>
                
                    <fullName>Contact Information - Non Primary</fullName>
                
                
                    <label>Contact Information - Non Primary</label>
                
                </value>
            
                <value>
                
                    <fullName>Address Information - Non Primary</fullName>
                
                
                    <label>Address Information - Non Primary</label>
                
                </value>
            
                <value>
                
                    <fullName>Other Resources</fullName>
                
                
                    <label>Other Resources</label>
                
                </value>
            
                <value>
                
                    <fullName>Pregnancy</fullName>
                
                
                    <label>Pregnancy</label>
                
                </value>
            
                <value>
                
                    <fullName>Address Information</fullName>
                
                
                    <label>Address Information</label>
                
                </value>
            
                <value>
                
                    <fullName>Contact Information</fullName>
                
                
                    <label>Contact Information</label>
                
                </value>
            
                <value>
                
                    <fullName>Relationships</fullName>
                
                
                    <label>Relationships</label>
                
                </value>
            
                <value>
                
                    <fullName>Resources</fullName>
                
                
                    <label>Resources</label>
                
                </value>
            
                <value>
                
                    <fullName>Signature_Page</fullName>
                
                
                    <label>Signature Page</label>
                
                </value>
            
                <value>
                
                    <fullName>Tax Filing</fullName>
                
                
                    <label>Tax Filing</label>
                
                </value>
            
                <value>
                
                    <fullName>Expenses</fullName>
                
                
                    <label>Expenses</label>
                
                </value>
            
                <value>
                
                    <fullName>Collateral Contact</fullName>
                
                
                    <label>Collateral Contact</label>
                
                </value>
            
                <value>
                
                    <fullName>Preferred MCO Selection</fullName>
                
                
                    <label>Preferred MCO Selection</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>