force-app/main/default/objects/NavFlowPageConfig__mdt/fields/PageDisplayName__c.field-meta.xml
<CustomField>
    <fullName>PageDisplayName__c</fullName>
    <description>Display name for the flow.
Example : Address

If blank, page display name from PageInfo meta data will be used.

If custom label is used then prefix with $.
Example : $Address</description>
    <inlineHelpText>Display name for the flow.
Example : Address

If blank, page display name from PageInfo meta data will be used.
If custom label is used then prefix with $.
Example : $Address</inlineHelpText>
    <label>Page Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>