force-app/main/default/objects/NavFlowPageConfig__mdt/fields/PageInfo__c.field-meta.xml
<CustomField>
    <fullName>PageInfo__c</fullName>
    <description>Page info</description>
    <label>Page Info</label>
    <referenceTo>PageInfo__mdt</referenceTo>
    <relationshipLabel>Navigation Flow Page Configuration</relationshipLabel>
    <relationshipName>Navigation_Flow_Page_Configuration</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>