force-app/main/default/objects/NavFlowPageConfig__mdt/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <description>This field is use to store the programs related to screens.</description>
    <label>Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>