force-app/main/default/objects/NavFlowPageConfig__mdt/fields/RAC_Trigger_Source__c.field-meta.xml
<CustomField>
    <fullName>RAC_Trigger_Source__c</fullName>
    <description>RAC Config due to which this screen will be queued.</description>
    <label>RAC Trigger Source</label>
    <referenceTo>RAC_Screen_Config__mdt</referenceTo>
    <relationshipLabel>Navigation Flow Page Configuration</relationshipLabel>
    <relationshipName>Navigation_Flow_Page_Configuration</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>