force-app/main/default/objects/NavFlowPageConfig__mdt/fields/SectionGroupName__c.field-meta.xml
<CustomField>
    <fullName>SectionGroupName__c</fullName>
    <description>Section or Group name. This will be used to display in the flow progress bar. Create a custom label with same name since framework will try to find out a label with this name.</description>
    <inlineHelpText>Section or Group name. This will be used to display in the flow progress bar. Create a custom label with same name since framework will try to find out a label with this name.</inlineHelpText>
    <label>Section/Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>