force-app/main/default/objects/NavFlowPageConfig__mdt/fields/SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber__c</fullName>
    <description>Page sequence number in the flow. Use increments of 3 to allow flexibility to insert new pages in an existing flow. Example:
Flow sequence numbers : 3, 6, 9, 12
If a new page needs to be inserted as 3rd page then the order could be: 3, 6, 7, 9, 12

This way there is no need to change existing page sequence numbers.</description>
    <inlineHelpText>Page sequence number in the flow. Use increments of 3 to allow flexibility to insert new pages in an existing flow. Example:
Flow sequence numbers : 3, 6, 9, 12
If a new page needs to be inserted as 3rd page then the order could be: 3, 6, 7, 9, 12</inlineHelpText>
    <label>Sequence Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>