force-app/main/default/objects/NavFlowPageConfig__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NavigationFlowDetail__c</columns>
    <columns>PageInfo__c</columns>
    <columns>PageDisplayName__c</columns>
    <columns>SectionGroupName__c</columns>
    <columns>ListenerPageNames__c</columns>
    <columns>NavFlowRule__c</columns>
    <columns>SequenceNumber__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>