force-app/main/default/objects/NavFlowPageConfig__mdt/listViews/ByFlowName.listView-meta.xml
<ListView>
    <fullName>ByFlowName</fullName>
    <columns>NavigationFlowDetail__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PageInfo__c</columns>
    <columns>PageDisplayName__c</columns>
    <columns>SectionGroupName__c</columns>
    <columns>ListenerPageNames__c</columns>
    <columns>NavFlowRule__c</columns>
    <columns>SequenceNumber__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NavigationFlowDetail__c</field>
        <operation>contains</operation>
        <value>Renewal</value>
    </filters>
    <label>By Flow Name</label>
</ListView>