force-app/main/default/objects/NavFlowPageConfig__mdt/listViews/Intake_Application.listView-meta.xml
<ListView>
    <fullName>Intake_Application</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Internal_Flow__c</columns>
    <columns>IsActive__c</columns>
    <columns>ListenerPageNames__c</columns>
    <columns>NavigationFlowDetail__c</columns>
    <columns>NavFlowRule__c</columns>
    <columns>PageDisplayName__c</columns>
    <columns>PageInfo__c</columns>
    <columns>SequenceNumber__c</columns>
    <columns>SectionGroupName__c</columns>
    <columns>Programs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>NavigationFlowDetail__c</field>
        
            <operation>equals</operation>
        
            <value>Intake_Application</value>
        
        </filters>
    <label>Intake Application</label>
    <language>en_US</language>
</ListView>